# spotify-mcp

./: .env.example  .gitignore  LICENSE  README.md  add-to-claude-desktop.sh  pyproject.toml
src/spotify_mcp/: __init__.py  __main__.py  audio_features.py  auth.py  client.py  server.py  structure.py
tests/: test_lyrics_client.py  test_structure.py
