[project]
name = "spotify-mcp"
version = "0.1.0"
description = "A local Model Context Protocol (MCP) server for the Spotify Web API — search, view playlists and tracks, and create playlists."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "spotify-mcp" }]
keywords = ["mcp", "spotify", "model-context-protocol", "claude"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
spotify-mcp = "spotify_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spotify_mcp"]
